<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="person_name"
        android:maxLines="1"
        android:singleLine="true"
        android:title="@string/pref_person_name" />
    
    <EditTextPreference
        android:key="car_registration_number"
        android:maxLines="1"
        android:singleLine="true"
        android:title="@string/pref_car_registration_number" />
    
    <EditTextPreference
        android:key="car_description"
        android:maxLines="5"
        android:singleLine="false"
        android:title="@string/pref_car_description" />

    <EditTextPreference
        android:key="other_description"
        android:maxLines="5"
        android:singleLine="false"
        android:title="@string/pref_other_description" />
        
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="taking_money"
        android:title="@string/pref_taking_money" />

</PreferenceScreen>